--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -12,13 +12,17 @@ version = "0.10.3"
 
 [dependencies]
 aho-corasick = "0.7"
+bumpalo = { version = "3", features = ["collections"] }
+hashbrown = { version = "0.13", features = ["bumpalo"] }
 lazy_static = "1.4"
-memchr = "2.3"
-serde = { version = "1.0", features = ["derive"], optional = true }
-serde_json = { version = "1.0", optional = true }
+memchr = "2"
+serde = { version = "1", features = ["derive"], optional = true }
+serde_json = { version = "1", optional = true }
+strum = { version = "0.24", optional = true }
+strum_macros = { version = "0.24", optional = true }
 
 [dev-dependencies]
 similar = "2.1.0"
 
 [features]
-serialize = ["dep:serde", "dep:serde_json"]
+serialize = ["dep:serde", "dep:serde_json", "dep:strum", "dep:strum_macros"]
