- Drop flags (don't calculate, set, or store them).   - Downstream users can do analyses themselves. - Separate location from source; drop SourceRange and replace with Loc. - Separate out symbol analysis into separate project.   - It's not always required.   - It complicates logic even though coupling is unnecessary.   - It makes transforming and creating ASTs (without care for symbols) downstream far more difficult, requiring manually maintaining fully correct symbols/scopes at all steps. - Use owned strings in AST instead of source-backed views.   - It removes the lifetime requirement.   - SourceRange only makes sense if we never transform or add new nodes downstream; otherwise, those downstream tasks become much more difficult.   - Parsing is rarely the bottleneck. - Drop use of bump allocator.   - Makes downstream usage far more difficult and burdensome than necessary.   - Code is far more difficult to reason about, due to loss of organic Rust syntax like moves, takes, derefs, ownership/borrowing, etc.   - Parsing is rarely the bottleneck. - Drop assignment_target field in AST. - Swap hashbrown with ahash. - Swap lazy_static with once_cell.

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -11,11 +11,10 @@ repository = "https://github.com/wilsonzlin/parse-js"
 version = "0.22.0"
 
 [dependencies]
+ahash = "0.8.7"
 aho-corasick = "0.7"
-bumpalo = { version = "3", features = ["collections"] }
-hashbrown = { version = "0.13", features = ["bumpalo"] }
-lazy_static = "1.4"
 memchr = "2"
+once_cell = "1.19.0"
 serde = { version = "1", features = ["derive"], optional = true }
 serde_json = { version = "1", optional = true }
 strum = { version = "0.24", optional = true }
