Remove Clone from Node as we now support arbitrary associated data; make serialisation features default as the guards complicated code; do not omit booleans from serialisation

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -5,6 +5,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.1", features = ["derive"] }
-parse-js = { path = "../rust", features = ["serialize"] }
+parse-js = { path = "../rust" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
