--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -15,13 +15,8 @@ ahash = "0.8.7"
 aho-corasick = "0.7"
 memchr = "2"
 once_cell = "1.19.0"
-serde = { version = "1", features = ["derive"], optional = true }
-serde_json = { version = "1", optional = true }
-strum = { version = "0.24", optional = true }
-strum_macros = { version = "0.24", optional = true }
+serde = { version = "1", features = ["derive"] }
+serde_json = { version = "1" }
 
 [dev-dependencies]
 similar = "2.1.0"
-
-[features]
-serialize = ["dep:serde", "dep:serde_json", "dep:strum", "dep:strum_macros"]
