--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 name = "symbol-js"
 version = "0.1.0"
 edition = "2021"
+categories = ["development-tools::build-utils", "web-programming"]
+description = "JavaScript symbol library"
+keywords = ["javascript", "symbol", "resolver", "js", "ecmascript"]
+license = "Apache-2.0"
+homepage = "https://github.com/wilsonzlin/symbol-js"
+repository = "https://github.com/wilsonzlin/symbol-js"
 
 [dependencies]
 ahash = "0.8.7"
