--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -7,5 +7,5 @@ publish = false
 version = "0.6.0"
 
 [dependencies]
+clap = { version = "4.5.17", features = ["derive"] }
 minify-js = { path = "../rust" }
-structopt = "0.3"
