--- a/minify-js-cli/Cargo.toml
+++ b/minify-js-cli/Cargo.toml
@@ -8,4 +8,4 @@ version = "0.6.0"
 
 [dependencies]
 clap = { version = "4.5.17", features = ["derive"] }
-minify-js = { path = "../rust" }
+minify-js = { path = "../minify-js" }
