--- a/minify-js-nodejs/Cargo.toml
+++ b/minify-js-nodejs/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-minify-js = { version = "0.6.0", path = "../rust" }
+minify-js = { version = "0.6.0", path = "../minify-js" }
 
 [dependencies.neon]
 version = "0.10"
