--- a/parse-js-cli/Cargo.toml
+++ b/parse-js-cli/Cargo.toml
@@ -5,6 +5,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.1", features = ["derive"] }
-parse-js = { path = "../rust" }
+parse-js = { path = "../parse-js" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
