--- a/optimize-js/Cargo.toml
+++ b/optimize-js/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+ahash = "0.8.6"
+croaring = "1.0.1"
+itertools = "0.12.0"
+num-bigint = "0.4.4"
+once_cell = "1.19.0"
+parse-js = { version = "0.24.1", path = "../parse-js" }
+symbol-js = { version = "0.2.0", path = "../symbol-js" }
