Debug via serialized dumps for later visualization

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,12 @@ members = [
   "minify-js-cli",
   "minify-js-nodejs",
   "minify-js",
+  "optimize-js-cli",
+  "optimize-js",
   "parse-js-cli",
   "parse-js",
   "symbol-js",
-  "test262", "optimize-js",
+  "test262",
 ]
 
 [profile.release]
