--- a/symbol-js/Cargo.toml
+++ b/symbol-js/Cargo.toml
@@ -11,4 +11,5 @@ repository = "https://github.com/wilsonzlin/symbol-js"
 
 [dependencies]
 ahash = "0.8.7"
-parse-js = "0.24.0"
+parse-js = { version = "0.24.1", path = "../parse-js" }
+serde = { version = "1.0.216", features = ["derive"] }
