--- a/optimize-js/Cargo.toml
+++ b/optimize-js/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ahash = "0.8.6"
+ahash = { version = "0.8.6", features = ["serde"] }
 croaring = "1.0.1"
 itertools = "0.12.0"
-num-bigint = "0.4.4"
+num-bigint = { version = "0.4.6", features = ["serde"] }
 once_cell = "1.19.0"
 parse-js = { version = "0.24.1", path = "../parse-js" }
+serde = { version = "1.0.216", features = ["derive"] }
 symbol-js = { version = "0.2.0", path = "../symbol-js" }
