--- a/optimize-js-debugger/package.json
+++ b/optimize-js-debugger/package.json
@@ -4,12 +4,14 @@
     "build-worker": "wasm-pack build --release --target web && mkdir -p dist && cp pkg/*.wasm dist/.",
     "build": "npm run build-worker && npm run esbuild -- --minify && cp -iv src/index.html dist/.",
     "esbuild": "esbuild --bundle --legal-comments=none --outdir=dist --sourcemap src/index.tsx",
+    "format": "cargo +nightly fmt && prettier --write 'src/**/*.{css,html,ts,tsx}'",
     "start": "npm run esbuild -- --servedir=dist --serve-fallback=src/index.html --watch"
   },
   "dependencies": {
     "@dagrejs/dagre": "^1.1.4",
     "@monaco-editor/react": "^4.6.0",
     "@wzlin/valid": "^0.4.3",
+    "@xtjs/lib": "^0.57.1",
     "@xyflow/react": "^12.3.6",
     "optimize-js-debugger": "file:pkg",
     "react": "^18",
@@ -19,6 +21,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "esbuild": "^0.24.0",
+    "prettier": "^3.4.2",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "typescript": "^5.7.2"
   }
 }
