--- a/optimize-js/Cargo.toml
+++ b/optimize-js/Cargo.toml
@@ -5,9 +5,12 @@ edition = "2021"
 
 [dependencies]
 ahash = { version = "0.8.6", features = ["serde"] }
+crossbeam-utils = "0.8.21"
+dashmap = { version = "6.1.0", features = ["rayon", "serde"] }
 itertools = "0.12.0"
 num-bigint = { version = "0.4.6", features = ["serde"] }
 once_cell = "1.19.0"
 parse-js = { version = "0.24.1", path = "../parse-js" }
+rayon = "1.10.0"
 serde = { version = "1.0.216", features = ["derive"] }
 symbol-js = { version = "0.2.0", path = "../symbol-js" }
